# stock-factor-strategy-research-framework

./: .gitignore  CONTRIBUTING.md  PROGRESS.md  README.md  README_EN.md  README_ZH.md  pyproject.toml  requirements.txt
.githooks/: pre-push
apps/: README.md  _bootstrap.py  _cli.py  _ux.py  cleanup_outputs.py  demo_factor_research.py  demo_strategy_backtest.py  generate_run_config.py  lint_config.py  list_factors.py  list_strategies.py  prepare_data.py  run_factor_research.py  run_factor_research_synthetic.py  run_from_config.py  run_model_factor_benchmark.py  run_strategy_backtest_synthetic.py  train_model_factor.py
configs/: base.yaml  cs_factor.yaml  cs_factor_demo.yaml  cs_stooq.yaml  cs_stooq_demo.yaml  minimal_local.yaml  ts_factor.yaml  ts_factor_demo.yaml
docs/: architecture.md  backup_and_git.md  cli_quickstart.md  config_overrides.md  data_processing.md  dl_feature_norm.md  example_factor_and_model_runs.md  metrics_prioritization.md  user_guide.md
factorlab/: __main__.py  config.py
scripts/: demo_factor_research.py  demo_strategy_backtest.py  factorlab.py  prepare_data.py  run_factor_research.py  run_from_config.py  run_model_factor_benchmark.py  train_model_factor.py
tests/: conftest.py  test_backtest_engine_constraints.py  test_cli_main.py  test_config_compose.py  test_config_schema_validation.py  test_data_adapter_plugins.py  test_data_io_directory.py  test_date_indexer.py  test_demo_smoke.py  test_factor_catalog.py  test_factor_combiner.py  test_factor_expression_composer.py  test_factor_plugins.py  test_generate_run_config_script.py  (+20 more)
(+206 files in other folders)
